Deprecated Java is upgraded to 17